# industry-advance

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  bg-tilemap.tmx  c2rust.py  convert-assets.py  convert_assets.py  convertall.py  docker.nix  gbfs_utils.py  linker.ld  maps.json  modifysprite.py  pad.py  padsprite.py  parse-save.py  parse_save.py  preparefont.py  runtests.sh  shell-minimal.nix  shell.nix  sound_convert.py  splitmap.py  thumbv4-none-agb.json  thumbv4t-nintendo-none-eabi.json
.cargo/:  config  config  config.toml
gfx/: grit2rust.py
nix/: dataclasses-json.nix  essential-packages.nix  gba-tools.nix  grit.nix  packagelist.nix  py2jdbc.nix  rust.nix  sources.json  typing_inspect.nix
nix/pkgs/dataclasses-json/: default.nix
nix/pkgs/gba-tools/: default.nix
nix/pkgs/grit/: default.nix
nix/pkgs/py2jdbc/: default.nix
nix/pkgs/typing_inspect/: default.nix
presentation/: presentation.tex
src/: atomics.rs  background.rs  debug_log.rs  ewram_alloc.rs  game.rs  interrupt.rs  item.rs  main.rs  map.rs  menu.rs  player.rs  shared_constants.rs  shared_types.rs  test.rs  testmap.rs  text.rs  vram.rs  window.rs
src/components/: builder_component.rs  component_utils.rs  input_component.rs  inventory_component.rs  item_source_component.rs  miner_component.rs  mod.rs  movement_component.rs  position_component.rs  sprite_component.rs
src/entities/: buildable.rs  container.rs  copper_wall.rs  cursor.rs  mechanical_drill.rs  mod.rs  player.rs
src/map/: background.rs  map.rs  mod.rs
src/sound/: mixer.rs  mod.rs  player.rs  test.rs  wave.rs
src/sprite/: error.rs  hw_sprite.rs  hw_sprite_alloc.rs  hw_sprite_alloc_test.rs  hw_sprite_handle.rs  mod.rs  sprite_dma.rs
src/systems/: building_system.rs  input_system.rs  item_movement_system.rs  mining_system.rs  mod.rs  movement_system.rs
