[package]
name = "industry-advance"
version = "0.1.0"
authors = ["casept <davids.paskevics@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
gba = {git = "https://github.com/rust-console/gba" } # We use features that aren't present in the latest release yet
ansi_rgb = "*"
arrayref = "0.3"
arrayvec = {version = "0.5.1", default-features = false}
fixed = "1"
twox-hash = {version = "1", default-features = false}
hashbrown = {version = "0.8.2", default-features = false, features = ["inline-more"]}
tiny_ecs = {git = "https://gitlab.com/casept/tiny_ecs", branch = "no_std", features = ["no_std"]}
gbfs_rs = {git = "https://github.com/industry-advance/gbfs_rs"}

serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
spinning_top = "0.2.1"
linked_list_allocator = "0.8.4"